crates/macro-tools/tests/ui/deref/fail/enum.rs
use picea_macro_tools::Deref;

#[derive(Deref)]
enum Wrapper {
    Value {
        #[deref]
        value: String,
    },
}

fn main() {}
